# ocmm

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  LICENSE.bilingual.md  LICENSE.zh.md  README.md  flake.nix  package.json  pnpm-lock.yaml  schema.json  tsconfig.json
.agents/plugins/: marketplace.json
.codex/agents/: dw-builder.toml  dw-clarifier.toml  dw-code-search.toml  dw-coding.toml  dw-complex.toml  dw-creative.toml  dw-deep.toml  dw-doc-search.toml  dw-documenting.toml  dw-explore.toml  dw-frontend.toml  dw-hard-reasoning.toml  dw-media-reader.toml  dw-normal-task.toml  dw-oracle-2nd.toml  dw-oracle-high.toml  dw-oracle.toml  dw-orchestrator.toml  dw-plan-critic.toml  dw-planner.toml  dw-quick.toml  dw-research.toml  dw-reviewer.toml
.github/workflows/: nix.yml  release.yml
.kb/: 00-overview.md  01-categories.md  02-agents.md  03-model-resolution.md  04-intent-gate.md  05-fallback-systems.md  06-plugin-design.md
crates/ocmm-lsp/: Cargo.toml
crates/ocmm-lsp/src/: main.rs
crates/ocmm-lsp/tests/: mcp_stdio.rs
crates/ocmm-lsp/tests/fixtures/: mock_lsp.mjs
docs/: architecture.md  prompt-sync.md  v1-maintenance.md
examples/: ocmm.example.jsonc
nix/modules/: common-options.nix  home-manager.nix  nixos.nix
scripts/: build-ocmm-lsp.ts  check-release-version.ts  codemode-execute-compatibility.test.ts  codemode-execute-compatibility.ts  gen-codex-plugin.ts  gen-schema.ts  lsp-package-manifest.ts  normalize-ocmm-package.ts  stage-lsp-packages.ts  sync-lsp-packages.ts  zod-to-json-schema.ts
src/: index.test.ts  index.ts  release-package.test.ts
(+433 files in other folders)
